# panache

./: .gitattributes  .versionary-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  TODO.md
crates/panache-formatter/: CHANGELOG.md  Cargo.toml
crates/panache-formatter/src/: formatter.rs  yaml_engine.rs
crates/panache-formatter/src/formatter/: core.rs  headings.rs  inline.rs  inline_layout.rs  lists.rs  tables.rs  yaml.rs
crates/panache-formatter/src/formatter/yaml/: STYLE.md  document.rs  options.rs
crates/panache-formatter/tests/: yaml_cross_validation.rs
crates/panache-formatter/tests/fixtures/yaml_corpus/blank_lines/: leading_blank_run.yaml  multiple_runs.yaml  whitespace_only_blanks_collapse.yaml
crates/panache-formatter/tests/fixtures/yaml_corpus/block_scalars/: folded_keep.yaml  folded_preserved.yaml  folded_then_literal.yaml  literal_in_seq.yaml  literal_preserved.yaml  literal_strip.yaml
crates/panache-formatter/tests/fixtures/yaml_corpus/comments/: between_keys.yaml  between_seq_items.yaml  blank_separated_section.yaml  inline_loose_spacing.yaml  inline_tight_spacing.yaml  leading_comment.yaml  multiple_inline.yaml  nested_inline.yaml  standalone_above_key.yaml  trailing_doc_comment.yaml
crates/panache-formatter/tests/fixtures/yaml_corpus/empty_values/: empty_in_sequence.yaml  multiple_empties.yaml
crates/panache-formatter/tests/fixtures/yaml_corpus/flow/: short_flow_sequence.yaml
crates/panache-formatter/tests/fixtures/yaml_corpus/indent/: nested_mapping_4sp.yaml  sequence_in_mapping_4sp.yaml  sequence_of_mappings_canonical.yaml  triple_nested_4sp.yaml
crates/panache-formatter/tests/fixtures/yaml_corpus/key_order/: deep_order_preserved.yaml  numeric_like_keys_preserved.yaml  reverse_alpha_preserved.yaml
crates/panache-formatter/tests/fixtures/yaml_corpus/mappings/: two_keys.yaml
crates/panache-formatter/tests/format/: bare_uris.rs  fenced_divs.rs  headings.rs  tables.rs
crates/panache-parser/: CHANGELOG.md  Cargo.toml  build.rs
crates/panache-parser/src/: options.rs  pandoc_ast.rs
crates/panache-parser/src/parser/: block_dispatcher.rs  core.rs  utils.rs  yaml.rs
crates/panache-parser/src/parser/blocks/: code_blocks.rs  container_prefix.rs  headings.rs  html_blocks.rs  line_blocks.rs  lists.rs  metadata.rs  tables.rs
crates/panache-parser/src/parser/blocks/tests/: blockquotes.rs  (+1 more)
crates/panache-parser/src/parser/inlines/: citations.rs  code_spans.rs  core.rs  inline_html.rs  inline_ir.rs  links.rs  uri-schemes.csv
crates/panache-parser/src/parser/utils/: attributes.rs  continuation.rs  list_item_buffer.rs  tree_copy.rs
crates/panache-parser/src/parser/yaml/: events.rs  model.rs  parser.rs  parser_v2.rs  scanner.rs  validator.rs
crates/panache-parser/src/syntax/: attributes.rs  kind.rs  yaml.rs
crates/panache-parser/tests/: golden_parser_cases.rs
crates/panache-parser/tests/pandoc/: allowlist.txt  report.txt
crates/panache-parser/tests/snapshots/: golden_parser_cases__parser_cst_citation_prefix_paren_escape_278.snap  golden_parser_cases__parser_cst_crlf_yaml_metadata.snap  golden_parser_cases__parser_cst_equation_attributes.snap  golden_parser_cases__parser_cst_equation_attributes_no_blank_line.snap  golden_parser_cases__parser_cst_equation_attributes_single_line.snap  golden_parser_cases__parser_cst_fenced_div_list_idempotency_setup.snap  golden_parser_cases__parser_cst_footnote_continuation_idempotency.snap  golden_parser_cases__parser_cst_footnote_paragraph_no_list_interrupt.snap  golden_parser_cases__parser_cst_grid_table_nordics.snap  golden_parser_cases__parser_cst_headings.snap  golden_parser_cases__parser_cst_html_block_article_indented_close_commonmark.snap  golden_parser_cases__parser_cst_html_block_article_indented_close_pandoc.snap  golden_parser_cases__parser_cst_html_block_article_leading_indent_commonmark.snap  golden_parser_cases__parser_cst_html_block_article_leading_indent_pandoc.snap  golden_parser_cases__parser_cst_html_block_button_inline_block_pandoc.snap  golden_parser_cases__parser_cst_html_block_comment_multiline_trailing_split_blockquote_pandoc.snap  golden_parser_cases__parser_cst_html_block_comment_trailing_split_blockquote_pandoc.snap  golden_parser_cases__parser_cst_html_block_comment_trailing_split_list_item_commonmark.snap  golden_parser_cases__parser_cst_html_block_comment_trailing_split_list_item_pandoc.snap  golden_parser_cases__parser_cst_html_block_commonmark_type6_type7_pandoc.snap  golden_parser_cases__parser_cst_html_block_div_same_line_trailing_commonmark.snap  golden_parser_cases__parser_cst_html_block_div_same_line_trailing_pandoc.snap  golden_parser_cases__parser_cst_html_block_doctype_commonmark.snap  golden_parser_cases__parser_cst_html_block_doctype_pandoc.snap  golden_parser_cases__parser_cst_html_block_incomplete_open_commonmark.snap  golden_parser_cases__parser_cst_html_block_incomplete_open_pandoc.snap  golden_parser_cases__parser_cst_html_block_indented_style_commonmark.snap  golden_parser_cases__parser_cst_html_block_indented_style_pandoc.snap  golden_parser_cases__parser_cst_html_block_p_close_standalone_pandoc.snap  golden_parser_cases__parser_cst_html_block_paragraph_demote_div_pandoc.snap  golden_parser_cases__parser_cst_html_block_paragraph_demote_strict_commonmark.snap  golden_parser_cases__parser_cst_html_block_paragraph_demote_strict_pandoc.snap  golden_parser_cases__parser_cst_html_block_pi_trailing_split_blockquote_pandoc.snap  golden_parser_cases__parser_cst_html_block_pre_close_standalone_commonmark.snap  golden_parser_cases__parser_cst_html_block_pre_close_standalone_pandoc.snap  golden_parser_cases__parser_cst_html_block_strict_block_multiline_open_commonmark.snap  golden_parser_cases__parser_cst_html_block_strict_block_multiline_open_pandoc.snap  golden_parser_cases__parser_cst_html_block_video_matched_pair_commonmark.snap  golden_parser_cases__parser_cst_html_block_video_matched_pair_pandoc.snap  golden_parser_cases__parser_cst_inline_code_attributes_lossless.snap  (+81 more)
crates/panache-parser/tests/yaml/: allowlist.txt  projector_audit.json  triage.json
(+269 files in other folders)
