[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/jolars/panache"
homepage = "https://panache.bz"
authors = ["Johan Larsson <johan@jolars.co>"]

[package]
name = "panache"
version = "2.51.0"
edition.workspace = true
readme = "README.md"
description = "An LSP, formatter, and linter for Markdown, Quarto, and R Markdown"
license.workspace = true
repository.workspace = true
homepage = "https://panache.bz"
keywords = ["quarto", "pandoc", "markdown", "formatter", "language-server"]
categories = [
    "command-line-utilities",
    "text-processing",
    "parsing",
    "parser-implementations",
]
authors.workspace = true

[workspace]
members = [
    "crates/panache-parser",
    "crates/panache-formatter",
    "crates/panache-wasm",
]
# Excluded because this crate must be compiled to wasm32-unknown-unknown to work
# (it relies on `dprint_core::generate_plugin_code!`, which is only defined on
# that target). Build with:
#   cargo build --manifest-path crates/panache-dprint/Cargo.toml \
#     --release --target wasm32-unknown-unknown
exclude = [
    "crates/panache-dprint",
]

[lib]
doctest = false

[[bin]]
name = "panache"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
panache-formatter = { path = "crates/panache-formatter", version = "0.9.0" }
panache-parser = { path = "crates/panache-parser", version = "0.14.0", features = [
    "serde",
    "schema",
] }
annotate-snippets = "0.12.15"
clap = { version = "4.6.1", features = ["derive", "env"], optional = true }
dirs = "6.0.0"
env_logger = "0.11.10"
emojis = "0.8.0"
globset = "0.4"
ignore = { version = "0.4", optional = true }
log = { version = "0.4.28", features = ["release_max_level_debug"] }
regex = "1.12.2"
rowan = "0.16.1"
salsa = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
wincode = { version = "0.5.5", features = ["derive"] }
yaml_parser = "0.3.0"
pretty_yaml = "0.6.0"
similar = { version = "3.0.0", features = ["text"] }
tempfile = "3.26"
tokio = { version = "1", features = [
    "process",
    "rt-multi-thread",
    "io-util",
    "io-std",
    "time",
    "macros",
    "fs",
], optional = true }
toml = "1.1.2"
tower-lsp-server = { version = "0.23", optional = true }
unicode-width = "0.2"
uuid = { version = "1.23.0", features = ["v4"], optional = true }

[dev-dependencies]
similar-asserts = "2.0.0"
insta = { version = "1.47.2", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt"] }
assert_cmd = "2.0"
predicates = "3.0"
jsonschema = { version = "0.46", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10.0"
which = "8.0"

[features]
default = ["cli", "lsp"]
cli = ["dep:clap", "dep:ignore"]
lsp = ["dep:tokio", "dep:tower-lsp-server", "dep:uuid"]

[build-dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.0"
clap_mangen = "0.3.0"
clap-markdown = "0.1.5"

[package.metadata.deb]
maintainer = "Johan Larsson <johan@jolars.co>"
copyright = "2026, Johan Larsson <johan@jolars.co>"
license-file = ["LICENSE", "4"]
extended-description = """\
A CLI formatter for Quarto, Pandoc, and Markdown files. Supports Quarto-specific \
syntax like fenced divs, tables, and math formatting that other formatters struggle \
with. Provides intelligent line wrapping, consistent formatting, and an integrated \
language server for editor support."""
depends = "$auto"
section = "text"
priority = "optional"
assets = [
    [
        "target/release/panache",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/panache/",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/panache/",
        "644",
    ],
    [
        "target/man/*.1",
        "usr/share/man/man1/",
        "644",
    ],
    [
        "target/completions/panache.bash",
        "usr/share/bash-completion/completions/panache",
        "644",
    ],
    [
        "target/completions/panache.fish",
        "usr/share/fish/vendor_completions.d/panache.fish",
        "644",
    ],
    [
        "target/completions/_panache",
        "usr/share/zsh/vendor-completions/_panache",
        "644",
    ],
    [
        "examples/*",
        "usr/share/doc/panache/examples/",
        "644",
    ],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/panache", dest = "/usr/bin/panache", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/panache/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/panache/LICENSE", mode = "644", doc = true },
    { source = "target/man/*.1", dest = "/usr/share/man/man1/", mode = "644" },
    { source = "target/completions/panache.bash", dest = "/usr/share/bash-completion/completions/panache", mode = "644" },
    { source = "target/completions/panache.fish", dest = "/usr/share/fish/vendor_completions.d/panache.fish", mode = "644" },
    { source = "target/completions/_panache", dest = "/usr/share/zsh/vendor-completions/_panache", mode = "644" },
    { source = "examples/*", dest = "/usr/share/doc/panache/examples/", mode = "644", doc = true },
]

[[bench]]
name = "formatting"
harness = false

[[bench]]
name = "lsp_incremental"
harness = false

[[bench]]
name = "cli_cache"
harness = false
