[package]
name = "panache-formatter"
version = "0.9.0"
edition.workspace = true
description = "Core formatting engine for Pandoc markdown, Quarto, and RMarkdown"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/panache-formatter"
keywords = ["quarto", "pandoc", "markdown", "formatter"]
categories = ["text-processing"]

[dependencies]
panache-parser = { path = "../panache-parser", version = "0.14.0" }
log = { version = "0.4.28", features = ["release_max_level_debug"] }
rowan = "0.16.1"
yaml_parser = "0.3.0"
pretty_yaml = "0.6.0"
unicode-width = "0.2"

[dev-dependencies]
insta = { version = "1.47.2", features = ["json"] }
similar-asserts = "2.0.0"
toml = "1.1.2"
